# AIbot

./: .gitignore  README.md  config.json  pyproject.toml
server/: app.py
src/: .env.example  config.py  main.py  server.py
src/ai_model/: __init__.py  ai_service.py  detector.py  trainer.py  training.py
src/gui/: __init__.py  main_window.py  training_interface.py
src/templates/: index.html
src/utils/: bot_controller.py  screen_capture.py
templates/: index.html
